package Atuendos;

import Prenda.Prenda;

public interface Sastre {
      Prenda crearPrendaInferior();
      Prenda crearPrendaSuperior();
      Prenda crearCalzado();
}
