package Prenda;

public enum Categoria {
  SUPERIOR,INFERIOR,CALZADO,ACCESORIO
}
