package Prenda;

public class Color {
  String codigo;
  public Color(String codigo) {
    this.codigo = codigo;
  }
}
