package Prenda;

public enum Material {
  CUERO,JEAN,GABARDINA,SEDA,ACETATO
}
