package Prenda;

public enum Trama {
  LISA,RAYADA,LUNARES,CUADROS,ESTAMPADO,PIQUE,
}
