package ServicioDelTiempo;

public enum Humedad {
  LLUVIOSO,SECO,
}
